--- a/Twitter Analysis.ipynb
+++ b/Twitter Analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "Index(['target', 'id', 'time', 'query', 'user', 'tweet'], dtype='object')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[['target','tweet']]\n",
+    "df['target'] = df['target'].replace(4,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -91,10 +101,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>target</th>\n",
-       "      <th>id</th>\n",
-       "      <th>time</th>\n",
-       "      <th>query</th>\n",
-       "      <th>user</th>\n",
        "      <th>tweet</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -102,46 +108,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>1467810369</td>\n",
-       "      <td>Mon Apr 06 22:19:45 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>_TheSpecialOne_</td>\n",
        "      <td>@switchfoot http://twitpic.com/2y1zl - Awww, t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>1467810672</td>\n",
-       "      <td>Mon Apr 06 22:19:49 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>scotthamilton</td>\n",
        "      <td>is upset that he can't update his Facebook by ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>1467810917</td>\n",
-       "      <td>Mon Apr 06 22:19:53 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>mattycus</td>\n",
        "      <td>@Kenichan I dived many times for the ball. Man...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
-       "      <td>1467811184</td>\n",
-       "      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>ElleCTF</td>\n",
        "      <td>my whole body feels itchy and like its on fire</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
-       "      <td>1467811193</td>\n",
-       "      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>Karoli</td>\n",
        "      <td>@nationwideclass no, it's not behaving at all....</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -149,22 +135,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   target          id                          time     query  \\\n",
-       "0       0  1467810369  Mon Apr 06 22:19:45 PDT 2009  NO_QUERY   \n",
-       "1       0  1467810672  Mon Apr 06 22:19:49 PDT 2009  NO_QUERY   \n",
-       "2       0  1467810917  Mon Apr 06 22:19:53 PDT 2009  NO_QUERY   \n",
-       "3       0  1467811184  Mon Apr 06 22:19:57 PDT 2009  NO_QUERY   \n",
-       "4       0  1467811193  Mon Apr 06 22:19:57 PDT 2009  NO_QUERY   \n",
-       "\n",
-       "              user                                              tweet  \n",
-       "0  _TheSpecialOne_  @switchfoot http://twitpic.com/2y1zl - Awww, t...  \n",
-       "1    scotthamilton  is upset that he can't update his Facebook by ...  \n",
-       "2         mattycus  @Kenichan I dived many times for the ball. Man...  \n",
-       "3          ElleCTF    my whole body feels itchy and like its on fire   \n",
-       "4           Karoli  @nationwideclass no, it's not behaving at all....  "
+       "   target                                              tweet\n",
+       "0       0  @switchfoot http://twitpic.com/2y1zl - Awww, t...\n",
+       "1       0  is upset that he can't update his Facebook by ...\n",
+       "2       0  @Kenichan I dived many times for the ball. Man...\n",
+       "3       0    my whole body feels itchy and like its on fire \n",
+       "4       0  @nationwideclass no, it's not behaving at all...."
       ]
      },
-     "execution_count": 58,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,16 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f87967db38>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x26e83d44a58>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -202,7 +181,7 @@
     }
    ],
    "source": [
-    "mapping = {0: \"NEGATIVE\",4: \"POSITIVE\"}\n",
+    "mapping = {0: \"NEGATIVE\",1: \"POSITIVE\"}\n",
     "def sentiment(label):\n",
     "    return mapping[int(label)]\n",
     "df.target = df.target.apply(lambda x: sentiment(x))\n",
@@ -212,84 +191,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text, sentiment = df['tweet'], df['target']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
-    "def preprocess_tweet(tweet):\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "wordLemm = WordNetLemmatizer()\n",
+    "def preprocess_tweet(data):\n",
     "    preprocessed=[]\n",
-    "    tweet.lower()\n",
-    "    tweet = re.sub('((www\\.[^\\s]+)|(https?://[^\\s]+))','URL',tweet)\n",
-    "    tweet = re.sub('@[^\\s]+','AT_USER', tweet)\n",
-    "    tweet = re.sub('[\\s]+', ' ', tweet)\n",
-    "    tweet = re.sub(r'#([^\\s]+)', r'\\1', tweet)\n",
-    "    tweet = re.sub(\"[^a-zA-Z0-9]\",\" \",tweet)\n",
-    "    sequencePattern   = r\"(.)\\1\\1+\"\n",
-    "    seqReplacePattern = r\"\\1\\1\"\n",
-    "    tweet = re.sub(sequencePattern,seqReplacePattern,tweet)\n",
-    "    tweetwords = ''\n",
-    "    for word in tweet.split():\n",
-    "        if len(word)>1:\n",
-    "            word = wordLemm.lemmatize(word)\n",
-    "            tweetwords += (word+' ')\n",
-    "    preprocessed.append(tweetwords)\n",
-    "    return tweet"
+    "    for tweet in data:\n",
+    "        tweet = re.sub('((www\\.[^\\s]+)|(https?://[^\\s]+))','URL',tweet)\n",
+    "        tweet = re.sub('@[^\\s]+','AT_USER', tweet)\n",
+    "        tweet = re.sub('[\\s]+', ' ', tweet)\n",
+    "        tweet = re.sub(r'#([^\\s]+)', r'\\1', tweet)\n",
+    "        tweet = re.sub(\"[^a-zA-Z0-9]\",\" \",tweet)\n",
+    "        sequencePattern   = r\"(.)\\1\\1+\"\n",
+    "        seqReplacePattern = r\"\\1\\1\"\n",
+    "        tweet = re.sub(sequencePattern,seqReplacePattern,tweet)\n",
+    "        tweetwords = ''\n",
+    "        for word in tweet.split():\n",
+    "            if len(word)>1:\n",
+    "                word = wordLemm.lemmatize(word)\n",
+    "                tweetwords += (word+' ')\n",
+    "        preprocessed.append(tweetwords)\n",
+    "    return preprocessed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['tweet'] = df['tweet'].apply(preprocess_tweet)"
+    "processedtext = preprocess_tweet(text)\n",
+    "processedtext"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0          AT USER URL Aww that s a bummer You shoulda go...\n",
-       "1          is upset that he can t update his Facebook by ...\n",
-       "2          AT USER I dived many times for the ball Manage...\n",
-       "3            my whole body feels itchy and like its on fire \n",
-       "4          AT USER no it s not behaving at all i m mad wh...\n",
-       "                                 ...                        \n",
-       "1599995    Just woke up Having no school is the best feel...\n",
-       "1599996    TheWDB com Very cool to hear old Walt intervie...\n",
-       "1599997    Are you ready for your MoJo Makeover Ask me fo...\n",
-       "1599998    Happy 38th Birthday to my boo of all time Tupa...\n",
-       "1599999        happy charitytuesday AT USER AT USER AT USER \n",
-       "Name: tweet, Length: 1600000, dtype: object"
+       "(1600000,)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['tweet']"
+    "processedtext=np.array(processedtext)\n",
+    "processedtext.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(processedtext, sentiment,test_size = 0.30, random_state = 0)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No. of feature_words:  500000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "vectoriser = TfidfVectorizer(ngram_range=(1,2), max_features=500000)\n",
+    "vectoriser.fit(X_train)\n",
+    "print('No. of feature_words: ', len(vectoriser.get_feature_names()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train = vectoriser.transform(X_train)\n",
+    "X_test  = vectoriser.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:764: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
+    }
+   ],
+   "source": [
+    "XGB=LogisticRegression()\n",
+    "XGB.fit(X_train,y_train)\n",
+    "pred=XGB.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "    NEGATIVE       0.83      0.81      0.82    239877\n",
+      "    POSITIVE       0.82      0.83      0.83    240123\n",
+      "\n",
+      "    accuracy                           0.82    480000\n",
+      "   macro avg       0.82      0.82      0.82    480000\n",
+      "weighted avg       0.82      0.82      0.82    480000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"LogisticRegression:\\n\",metrics.classification_report(y_test,pred))"
+   ]
   },
   {
    "cell_type": "code",
