--- a/Twitter Analysis.ipynb
+++ b/Twitter Analysis.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "4           Karoli  @nationwideclass no, it's not behaving at all....  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "Name: tweet, Length: 1600000, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -267,26 +267,146 @@
        "      <td>0</td>\n",
        "      <td>@nationwideclass no, it's not behaving at all....</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@Kwesidei not the whole crew</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Need a hug</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@LOLTrish hey  long time no see! Yes.. Rains a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@Tatiana_K nope they didn't have it</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@twittera que me muera ?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0</td>\n",
+       "      <td>spring break in plain city... it's snowing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0</td>\n",
+       "      <td>I just re-pierced my ears</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@caregiving I couldn't bear to watch it.  And ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@octolinz16 It it counts, idk why I did either...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@smarrison i would've been the first, but i di...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@iamjazzyfizzle I wish I got to watch it with ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Hollis' death scene will hurt me severely to w...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0</td>\n",
+       "      <td>about to file taxes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@LettyA ahh ive always wanted to see rent  lov...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@FakerPattyPattz Oh dear. Were you drinking ou...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@alydesigns i was out most of the day so didn'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>0</td>\n",
+       "      <td>one of my friend called me, and asked to meet ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@angry_barista I baked you a cake but I ated it</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>0</td>\n",
+       "      <td>this week is not going as i had hoped</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>0</td>\n",
+       "      <td>blagh class at 8 tomorrow</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   target                                              tweet\n",
-       "0       0  @switchfoot http://twitpic.com/2y1zl - Awww, t...\n",
-       "1       0  is upset that he can't update his Facebook by ...\n",
-       "2       0  @Kenichan I dived many times for the ball. Man...\n",
-       "3       0    my whole body feels itchy and like its on fire \n",
-       "4       0  @nationwideclass no, it's not behaving at all...."
+       "    target                                              tweet\n",
+       "0        0  @switchfoot http://twitpic.com/2y1zl - Awww, t...\n",
+       "1        0  is upset that he can't update his Facebook by ...\n",
+       "2        0  @Kenichan I dived many times for the ball. Man...\n",
+       "3        0    my whole body feels itchy and like its on fire \n",
+       "4        0  @nationwideclass no, it's not behaving at all....\n",
+       "5        0                      @Kwesidei not the whole crew \n",
+       "6        0                                        Need a hug \n",
+       "7        0  @LOLTrish hey  long time no see! Yes.. Rains a...\n",
+       "8        0               @Tatiana_K nope they didn't have it \n",
+       "9        0                          @twittera que me muera ? \n",
+       "10       0        spring break in plain city... it's snowing \n",
+       "11       0                         I just re-pierced my ears \n",
+       "12       0  @caregiving I couldn't bear to watch it.  And ...\n",
+       "13       0  @octolinz16 It it counts, idk why I did either...\n",
+       "14       0  @smarrison i would've been the first, but i di...\n",
+       "15       0  @iamjazzyfizzle I wish I got to watch it with ...\n",
+       "16       0  Hollis' death scene will hurt me severely to w...\n",
+       "17       0                               about to file taxes \n",
+       "18       0  @LettyA ahh ive always wanted to see rent  lov...\n",
+       "19       0  @FakerPattyPattz Oh dear. Were you drinking ou...\n",
+       "20       0  @alydesigns i was out most of the day so didn'...\n",
+       "21       0  one of my friend called me, and asked to meet ...\n",
+       "22       0   @angry_barista I baked you a cake but I ated it \n",
+       "23       0             this week is not going as i had hoped \n",
+       "24       0                         blagh class at 8 tomorrow "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(25)"
    ]
   },
   {
